--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,16 @@
 
 # Example code in package build process
 *-Ex.R
+
 # RStudio files
 .Rproj.user/
+
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
 .Rproj.user
 packrat/lib*/
+
+# Rmarkdown cache
+P115_analysis_cache/
+
